fixed scrollbar overflow bug

--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-body {
-    max-height: 100vh;
-    min-height: 100vh;
-    min-width: 100vw;
-    max-width: 100vw;
+html, body {
+    height: 100%;
+    width: 100%;
     margin: 0;
     border: 0;
 }
@@ -12,10 +10,11 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    min-width: 100vw;
+    height: 100%;
+    width: 100%;
     margin: 0;
     border: 0;
+    overflow: hidden;
 }
 
 .child-container {
